Fix secondary pages navigation

--- a/include_universalheader.html
+++ b/include_universalheader.html
@@ -1,19 +1,19 @@
 <!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::   TOP GREY BRANDING SECTION  DESKTOP AND MOBILE  :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
-    <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
-        <div class="col-xs-6 col-sm-3">
-            <a href="http://www.utexas.edu/"><img src="images/universal/utlogo.png" class="img-responsive" alt="The University of Texas at Austin - What Starts Here Changes The World" border="0"></a>
-        </div>
+	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+		<div class="col-xs-6 col-sm-3">
+			<a href="http://www.utexas.edu/"><img src="images/universal/utlogo.png" class="img-responsive" alt="The University of Texas at Austin - What Starts Here Changes The World" border="0"></a>
+		</div>
 
 
-        <div class="col-xs-4 col-sm-2">
-            <a href="https://www.utexas.edu/student-affairs"><img src="images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
-        </div>
+		<div class="col-xs-4 col-sm-2">
+			<a href="https://www.utexas.edu/student-affairs"><img src="images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
+		</div>
 
-        <div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
-        </div>
+		<div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
+		</div>
 
-       <div class="col-xs-2 visible-xs" style="margin-top: 15px">
+		<div class="col-xs-2 visible-xs" style="margin-top: 15px">
 			<img src="images/universal/hamburgericon.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px;right: 20px;position: absolute;cursor:pointer" />
 		</div> 
 
@@ -24,10 +24,10 @@
 				<input type="text" class="search-input" name="q" placeholder="search..."> 
 				<input type="image" class="search-btn" type="submit" src="images/universal/searchicon.png" border="0" alt="Submit"/> 
 			</form>
-			
-			
+
+
 		</div> 
-		
+
 
 
 	</div><!-- (this ends the container-fluid tag) -->
@@ -48,13 +48,13 @@
 </div>
 
 <div class="row row-top-white" style="width:inherit;margin:inherit;">
-    <div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
-        <!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  END TOP GREY BRANDING SECTION  DESKTOP AND MOBILE  :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
+		<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  END TOP GREY BRANDING SECTION  DESKTOP AND MOBILE  :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
 
 
 
-      		<!-- 	:::::::::::::::::::::::::::::::::::::::::  desktop  ::::::::::::::::::::::::::::::::::::::::::::: -->
+		<!-- 	:::::::::::::::::::::::::::::::::::::::::  desktop  ::::::::::::::::::::::::::::::::::::::::::::: -->
 
 
 		<div class="col-xs-12 col-sm-4 custom3 hidden-xs">
@@ -63,30 +63,45 @@
 
 		<div class=" col-md-8 hidden-xs" align="left"><br/><br/><br/>
 
-			<center><span class="homepageheader">&nbsp;We'll help you figure it out.</span></center>
-<div class="row hidden-md">
-</div>
+			<center><span class="homepageheader hidden-xs">&nbsp;We'll help you figure it out.</span></center>
+			<div class="row hidden-md">
+			</div>
 			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html"><img src="images/universal/icon_phone.png"  class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" vspace="30" /></a></div>
 			<div class="col-sm-4 custom7 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html">&nbsp;<B>512-471-3515</B><br/>&nbsp;Mon. - Fri. &nbsp;8am-5pm</a></div>
 			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="images/universal/icon_location.png"  class="img-responsive" alt="CMHC campus location" hspace="0" vspace="30" /></a></div>
 			<div class="col-sm-3 custom7 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980">&nbsp;Campus <br/>&nbsp;Location</a></div>
 			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="images/universal/icon_mycmhc.png"  class="img-responsive" alt="MyCMHC" hspace="0" vspace="30" /></a></div>
 			<div class="col-sm-2 custom6 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx">&nbsp;MyCMHC</a></div>
-
+		</div>
+	</div>
 </div>
+
+
+
+
+<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  CRISIS MESSAGE  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
+<!--
+            </div><!~~ (this ends the container-fluid tag) ~~>
+
+        <div class="row row-lightyellow " style="width:inherit;margin:inherit;">
+        <div class="col-xs-12 col-sm-12">
+        <div class="container-fluid"><!~~ (this starts the container-fluid tag) ~~>
+
+     <!~~ <p><br/><span class="crisistext">The Counseling and Mental Health Center will be closed until 10 a.m. on Monday, April 18.  Appointments scheduled before then are cancelled; we will work with you to reschedule.</span><br/><a href="https://emergency.utexas.edu/"><img src="images/moreinformation.png" alt="for information here on UT closure" width="207" height="48" border="0" vspace="10" /></a></p> ~~>
+     <p><br/><H1 class="H1">Race-Related Tragedies: Response and Resources  </H1><br/><center><a href="event_racetragedy.html"><img src="images/moreinformation2.png" alt="information here on responsive resources"  class="img-responsive" border="0" vspace="10" /></a></center></p>
+   <!~~ <a href="event_racetragedy.html"><img src="images/largepromotions/eventpromomobile_tragedy.png" class="img-responsive" alt="transitioning to college life? a meesage to all new longhorns" border="0"></a> ~~>
+
+        </div>
+         </div>
+         </div>
+
+-->
+
+<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  END CRISIS MESSAGE  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
 </div>
-
-
-
-		<!-- 	:::::::::::::::::::::::::::::::::::::::::  mobile  ::::::::::::::::::::::::::::::::::::::::::::: -->
-
-
+<div class="container-fluid">
+	<div id="mobile-info-navbar" class="row row-top-white" style="display:none"><BR>
 		<div class="col-xs-12 visible-xs">
-			<a href="https://test.cmhc.utexas.edu/REDESIGN2017/index.html"><center><img src="images/universal/cmhcbranding_mobile.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
-
-
-
-			<center><span class="homepageheader">We'll help you figure it out.</span></center><br/>
 
 			<center>
 				<table border="0" width="100%" cellspacing="0" cellpadding="8">
@@ -133,51 +148,23 @@
 				</table>
 			</center>
 		</div>
-
-	</div>
-
-
-
-
-  <!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  CRISIS MESSAGE  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
-	<!-- 
-                </div><!~~ (this ends the container-fluid tag) ~~>
-
-            <div class="row row-lightyellow " style="width:inherit;margin:inherit;">
-            <div class="col-xs-12 col-sm-12">
-            <div class="container-fluid"><!~~ (this starts the container-fluid tag) ~~>
-
-         <!~~ <p><br/><span class="crisistext">The Counseling and Mental Health Center will be closed until 10 a.m. on Monday, April 18.  Appointments scheduled before then are cancelled; we will work with you to reschedule.</span><br/><a href="https://emergency.utexas.edu/"><img src="images/moreinformation.png" alt="for information here on UT closure" width="207" height="48" border="0" vspace="10" /></a></p> ~~>
-         <p><br/><H1 class="H1">Race-Related Tragedies: Response and Resources  </H1><br/><center><a href="event_racetragedy.html"><img src="images/moreinformation2.png" alt="information here on responsive resources"  class="img-responsive" border="0" vspace="10" /></a></center></p>
-       <!~~ <a href="event_racetragedy.html"><img src="images/largepromotions/eventpromomobile_tragedy.png" class="img-responsive" alt="transitioning to college life? a meesage to all new longhorns" border="0"></a> ~~>
-
-            </div>
-             </div>
-             </div>
-    
- -->
-
-	<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  END CRISIS MESSAGE  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
-</div>
-<div id="navbar" class="row row-top-white"><BR>
-    <div class="container-fluid">
-        <div class="col-xs-12 col-sm-3 custom3 ">
-            <div class="dropdown">
-                <button class="dropbtn">Help With A Crisis <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
-                <div class="dropdown-content">
-                    	<a href="https://test.cmhc.utexas.edu/REDESIGN2017/24hourcounseling.html"class="a_class_dropdown"><b>24/7 Crisis Line: <br/> 512-471-CALL (2255) <br/>(UT Students Only)</b></a>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Help With A Crisis <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/24hourcounseling.html"class="a_class_dropdown"><b>24/7 Crisis Line: <br/> 512-471-CALL (2255) <br/>(UT Students Only)</b></a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/crisishelp.html"class="a_class_dropdown">Crisis Services</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/afriend.html"class="a_class_dropdown">Help a friend in distress</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/bethatone/index.html"class="a_class_dropdown">Be That One - UT's Suicide Prevention Program</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/bethatone/warningsigns.html"class="a_class_dropdown">Suicide warning signs</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-3 custom3 ">
-            <div class="dropdown">
-                <button class="dropbtn">Self-Care<i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
-                <div class="dropdown-content">
-                    <a href="https://test.cmhc.utexas.edu/REDESIGN2017/thrive/index.html"class="a_class_dropdown">Thrive at UT</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Self-Care<i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/thrive/index.html"class="a_class_dropdown">Thrive at UT</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/mindbodylab.html"class="a_class_dropdown">MindBody Lab</a>
 					<a href="http://www.ulifeline.org/self_evaluator"class="a_class_dropdown">Online anonymous self-assessment</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/afriend.html"class="a_class_dropdown">Help a friend in distress</a>
@@ -224,14 +211,14 @@
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/veterans.html"class="a_class_dropdown">Veteran's Issues</a>
 						</div>
 					</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-3 custom3 ">
-            <div class="dropdown">
-                <button class="dropbtn">Counseling & Medication <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
-                <div class="dropdown-content">
-                    <a href="https://test.cmhc.utexas.edu/REDESIGN2017/gettingstarted.html"class="a_class_dropdown"><b>Getting Started</b></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Counseling & Medication <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/gettingstarted.html"class="a_class_dropdown"><b>Getting Started</b></a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/individualcounseling.html"class="a_class_dropdown">Individual counseling</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/groups.html"class="a_class_dropdown">Groups & classes</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/mindfuleating.html"class="a_class_dropdown">Mindful eating program</a>
@@ -242,14 +229,14 @@
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/diversitycoordinators.html"class="a_class_dropdown">Diversity coordinators</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/integratedhealth.html"class="a_class_dropdown">Integrated health</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/counseling_resources.html"class="a_class_dropdown">Off-campus counseling / mental health resources</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-3 custom3 ">
-            <div class="dropdown">
-                <button class="dropbtn">Prevention & Outreach <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
-                <div class="dropdown-content">
-                    					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/"class="a_class_dropdown"><b>About Prevention & Outreach</b></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Prevention & Outreach <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/"class="a_class_dropdown"><b>About Prevention & Outreach</b></a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/index.html"class="a_class_dropdown">Voices Against Violence - UT's Interpersonal Violence Prevention Program</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/bethatone/index.html"class="a_class_dropdown">Be That One - UT's Suicide Prevention Program</a>
 					<a href="https://wellnessnetwork.utexas.edu/BeVocal/index.html"class="a_class_dropdown">BeVocal - UT's Bystander Intervention Program</a>
@@ -258,14 +245,14 @@
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/presentations.html"class="a_class_dropdown">Request a presention</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/vav_getinvolved.html"class="a_class_dropdown">VAV student involvement</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/diversitycoordinators.html"class="a_class_dropdown">Diversity coordinators</a>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="col-xs-12 visible-xs">
-    <a href="index.html"><center><img src="images/universal/cmhcbranding_mobile.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
+	<a href="index.html"><center><img src="images/universal/cmhcbranding_mobile.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
 </div>
 
 <script>
@@ -278,11 +265,30 @@
 		$(this).find(".fa-angle-double-down").toggle();
 	});
 
-	$("#mobile-search-btn").click(function(e) {
-		$("#mobile-search-container").toggle();
-	});
-
 	(function($, viewport){
+
+		$("#mobile-search-btn").click(function(e) {
+			if( viewport.is('xs') ) {
+				if ($("#mobile-info-navbar").is(":visible")) {
+					$("#mobile-info-navbar").hide();
+				} else {
+					$("#mobile-info-navbar").show();
+				}
+
+				if ($("#mobile-search-container").is(":visible")) {
+					$("#mobile-search-container").hide();
+				} else {
+					$("#mobile-search-container").show();
+				}
+
+				if ($("#navbar").is(":visible")) {
+					$("#navbar").hide();
+				} else {
+					$("#navbar").show();
+				}
+			}
+		});
+
 		$(".dropbtn").hover(function() {
 			if (viewport.is('lg')) {
 				$(this).next(".dropdown-content").show();
@@ -337,6 +343,7 @@
 					// Executes only in XS breakpoint
 					if( viewport.is('>xs') ) {
 						$("#mobile-search-container").hide();
+						$("#mobile-info-navbar").hide();
 					}
 				}, 300)
 		);
